--- a/ChangeLog
+++ b/ChangeLog
@@ -11,7 +11,7 @@
 2009-03-23  10:20  Christos Zoulas <christos@zoulas.com>
 
 	* Avoid file descriptor leak in compress code from
-	  Daniel Novotny
+	  (Daniel Novotny)
 
 2009-03-18  16:50  Christos Zoulas <christos@zoulas.com>
 
