--- a/doc/file.man
+++ b/doc/file.man
@@ -1,4 +1,4 @@
-.\" $File: file.man,v 1.78 2008/11/06 21:17:45 rrt Exp $
+.\" $File: file.man,v 1.79 2008/11/06 22:49:08 rrt Exp $
 .Dd October 9, 2008
 .Dt FILE __CSECTION__
 .Os
@@ -175,7 +175,7 @@ Exclude the test named in
 .Ar testname
 from the list of tests made to determine the file type. Valid test names
 are:
-.Bl -tag -width
+.Bl -tag -width compress
 .It apptype
 .Dv EMX
 application type (only on EMX).
