--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-09-14  13:49  Christos Zoulas <christos@zoulas.com<
+
+	* Centralize magic path handling routines and remove the
+	  special-casing from file.c so that the python module for
+	  example comes up with the same magic path (Fixes ~/.magic
+	  handling) (from Gab)
+
 2009-09-11  23:38  Reuben Thomas <rrt@sc3d.org>
 
 	* When magic argument is a directory, read the files in
