--- a/doc/libmagic.man
+++ b/doc/libmagic.man
@@ -1,4 +1,4 @@
-.\" $File: libmagic.man,v 1.20 2009/05/08 23:02:44 christos Exp $
+.\" $File: libmagic.man,v 1.21 2009/11/24 21:16:14 christos Exp $
 .\"
 .\" Copyright (c) Christos Zoulas 2003.
 .\" All Rights Reserved.
@@ -25,8 +25,8 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 6, 2008
-.Dt MAGIC 3
+.Dd November 24, 2009
+.Dt LIBMAGIC 3
 .Os
 .Sh NAME
 .Nm magic_open ,
