--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-14  22:58  Reuben Thomas <rrt@sc3d.org>
+
+	* Re-jig Zip file type magic so that unsupported special
+	  Zip types (those with "mimetype" at offset 30) can be
+	  recognized.
+
 2010-02-02  21:50  Reuben Thomas <rrt@sc3d.org>
 
 	* Add support for OCF (EPUB) files (application/epub+zip)
