--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-21  12:20  Christos Zoulas <christos@zoulas.com>
+
+	* MINGW32 portability from LRN
+
+	* Don't warn about escaping magic regex chars when we are in a regex.
+
 2010-07-19  10:55  Christos Zoulas <christos@zoulas.com>
 
 	* Only try to print prpsinfo for core files. (Jan Kaluza)
