--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-09-20  21:16  Reuben Thomas <rrt@sc3d.org>
+
+	* Apply all patches from Debian package 5.04-6 which have not
+	  already been applied and are not Debian-specific.
+
 2010-09-20  15:24  Reuben Thomas <rrt@sc3d.org>
 
 	* Minor security fix to softmagic.c (don't use untrusted
