--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-20  22:11  Reuben Thomas <rrt@sc3d.org>
+
+	* Apply some patches from Ubuntu and Fedora.
+
 2010-09-20  21:16  Reuben Thomas <rrt@sc3d.org>
 
 	* Apply all patches from Debian package 5.04-6 which have not
