--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-24  10:42  Christos Zoulas <christos@zoulas.com>
+
+	* Fix the whitespace comparing code (Christopher Chittleborough)
+
 2010-10-06  21:05  Christos Zoulas <christos@zoulas.com>
 
 	* allow string/t to work (Jan Kaluza)
