ChangeLog for previous commit.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-11-05  17:26  Reuben Thomas <rrt@sc3d.org>
+	* Make bug reporting addresses more visible.
+
 2010-11-01  18:35  Reuben Thomas <rrt@sc3d.org>
 	* Add tcl magic from Gustaf Neumann
 
