--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,20 @@
+2010-12-22  13:12  Christos Zoulas <christos@zoulas.com>
+
+	* Add pstring/BHhLl to specify the type of the length of pascal
+	  strings.
+
 2010-11-26  18:39  Reuben Thomas <rrt@sc3d.org>
+
 	* Fix "-e soft": it was ignored when softmagic was called
 	  during asciimagic.
 	* Improve comments and use "unsigned char" in tar.h/is_tar.c.
 
 2010-11-05  17:26  Reuben Thomas <rrt@sc3d.org>
+
 	* Make bug reporting addresses more visible.
 
 2010-11-01  18:35  Reuben Thomas <rrt@sc3d.org>
+
 	* Add tcl magic from Gustaf Neumann
 
 2010-10-24  10:42  Christos Zoulas <christos@zoulas.com>
