--- a/doc/libmagic.man
+++ b/doc/libmagic.man
@@ -1,4 +1,4 @@
-.\" $File: libmagic.man,v 1.22 2010/06/01 12:31:31 christos Exp $
+.\" $File: libmagic.man,v 1.23 2011/01/14 21:59:17 rrt Exp $
 .\"
 .\" Copyright (c) Christos Zoulas 2003.
 .\" All Rights Reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd July 1, 2010
+.Dd January 14, 2011
 .Dt LIBMAGIC 3
 .Os
 .Sh NAME
@@ -94,6 +94,8 @@ and try to look in its contents.
 Return a MIME type string, instead of a textual description.
 .It Dv MAGIC_MIME_ENCODING
 Return a MIME encoding, instead of a textual description.
+.It Dv MAGIC_MIME
+A shorthand for MAGIC_MIME_TYPE | MAGIC_MIME_ENCODING.
 .It Dv MAGIC_CONTINUE
 Return all matches, not just the first.
 .It Dv MAGIC_CHECK
@@ -103,32 +105,34 @@ On systems that support
 .Xr utime 2
 or
 .Xr utimes 2 ,
-attempt to preserve the access time of files analyzed.
+attempt to preserve the access time of files analysed.
 .It Dv MAGIC_RAW
 Don't translate unprintable characters to a \eooo octal representation.
 .It Dv MAGIC_ERROR
 Treat operating system errors while trying to open files and follow symlinks
 as real errors, instead of printing them in the magic buffer.
+.It Dv MAGIC_APPLE
+Return the Apple creator and type.
 .It Dv MAGIC_NO_CHECK_APPTYPE
-Check for
+Don't check for
 .Dv EMX
 application type (only on EMX).
-.It Dv MAGIC_NO_CHECK_ASCII
-Check for various types of ascii files.
+.It Dv MAGIC_NO_CHECK_CDF
+Don't get extra information on MS Composite Document Files.
 .It Dv MAGIC_NO_CHECK_COMPRESS
-Don't look for, or inside compressed files.
+Don't look inside compressed files.
 .It Dv MAGIC_NO_CHECK_ELF
-Don't print elf details.
-.It Dv MAGIC_NO_CHECK_FORTRAN
-Don't look for fortran sequences inside ascii files.
+Don't print ELF details.
+.It Dv NO_CHECK_ENCODING
+Don't check text encodings.
 .It Dv MAGIC_NO_CHECK_SOFT
 Don't consult magic files.
 .It Dv MAGIC_NO_CHECK_TAR
 Don't examine tar files.
+.It Dv MAGIC_NO_CHECK_TEXT
+Don't check for various types of text files.
 .It Dv MAGIC_NO_CHECK_TOKENS
 Don't look for known tokens inside ascii files.
-.It Dv MAGIC_NO_CHECK_TROFF
-Don't look for troff sequences inside ascii files.
 .El
 .Pp
 The
@@ -254,4 +258,5 @@ The compiled default magic database.
 .Sh AUTHORS
 Måns Rullgård Initial libmagic implementation,
 and configuration.
+.br
 Christos Zoulas API cleanup, error code and allocation handling.
