--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-14  22:33  Reuben Thomas <rrt@sc3d.org>
+
+	* New Python binding in pure Python.
+	* Update libmagic(3).
+
 2011-01-06  21:40  Reuben Thomas <rrt@sc3d.org>
 
 	* Fix Python bindings (including recent Python 3 compatibility
