--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-07  19:38  Christos Zoulas <christos@zoulas.com>
+
+	* add lrzip support (from Ville Skytta)
+
 2011-02-10  16:36  Christos Zoulas <christos@zoulas.com>
 
 	* fix CDF bounds checking (Guy Helmer)
